--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
         {% include 'includes/footer.html' %}
     </div>
     <script src="{% static 'js/jquery-3.7.1.min.js' %}"></script>
+    <script src="{% static 'js/header.js' %}"></script>
     {% block js %}{% endblock %}
     
 </body>
