--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -2,7 +2,7 @@
     <div>
         <h2>Разделы</h2>
         <a href="{% url 'movies:movies-list' %}">Фильмы</a>
-        <a href="#">Сериалы</a>
+        <a href="{% url 'serials:serials-list' %}">Сериалы</a>
     </div>
     <div>
         <h2>Помощь</h2>
@@ -22,8 +22,7 @@
     </div>
     <div>
         <h2>Подписывайся</h2>
-        <a href="#">VK</a>
-        <a href="#">OK</a>
-        <a href="#">Telegram</a>
+        <a href="https://vk.com/prsvt420">VK</a>
+        <a href="https://t.me/prsvt420">Telegram</a>
     </div>
 </footer>
