--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -7,7 +7,7 @@
     <div>
         <h2>Помощь</h2>
         <a href="#">Справка</a>
-        <a href="#">Отправить обращение</a>
+        <a href="{% url 'core:feedback' %}">Отправить обращение</a>
         <a href="#">Пользовательское соглашение</a>
         <a href="#">Политика конфиденциальности</a>
         <a href="#">Политика обработки файлов cookie</a>
