--- a/static/css/style.css
+++ b/static/css/style.css
@@ -65,7 +65,7 @@ header {
 
         input:focus {
             color: var(--second-color);
-            background-color: white;
+            background-color: var(--base-font-color);
             transition: var(--transition);
         }
     }
