Added yasg, celery, smtp

--- a/core/templates/core/template_feedback.html
+++ b/core/templates/core/template_feedback.html
@@ -1,3 +1,9 @@
-<pre>
-    <b>Текст обращения:</b> {{ form.text }}</b>
-</pre>
+<div>
+    <b>E-mail:</b> {{ email }}
+    <br>
+    <b>Тема обращения:</b> {{ topic }}
+    <br>
+    <b>Обращение:</b> {{ text }}
+    <br>
+    <b>Дата обращения:</b> {{ date }}
+</div>
