--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -3,7 +3,7 @@
         <h2>Разделы</h2>
         <a href="{% url 'movies:movies-list' %}">Фильмы</a>
         <a href="{% url 'serials:serials-list' %}">Сериалы</a>
-        <a href="{% url 'api:api-root' %}">API</a>
+        <a href="{% url 'api:schema-redoc' %}">API</a>
     </div>
     <div>
         <h2>Помощь</h2>
